☃️👽 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
 
     <p>
       Welcome to the game!
+          <p>
+      Press the correct flashing circle and sound in order to win!
+                <p>
+      You have three strikes before you lose!
     </p>
     
-   <p> Number of strikes(Three strikes and you lose!) :</p> <p id="output"> </p>
+
     
 
     <button id="startBtn" onclick="startGame()">
